<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Note</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_pin">Pin</string>
    <string name="action_del">Delete</string>
    <string name="action_deleteForever">Delete forever</string>
    <string name="action_restore">Restore</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_calendar">Calendar</string>
    <string name="bottom_school">School</string>
    <string name="bottom_setting">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_account">Account</string>
    <string name="menu_trash">Trash</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <string name="change_password_button">Change Password</string>
    <string name="btnSearch">Search</string>
    <string name="ed_search">  Input to search</string>
    <string name="languages">Language</string>

    <string name="bot_home">Home</string>
    <string name="bot_calendar">Calendar</string>
    <string name="bot_school">School</string>
    <string name="bot_settings">Settings</string>

    <string name="dialog_language">English</string>
    <string name="note_belong">Private Note</string>

    <string name="err_input_student_id_first">Input student id first</string>
    <string name="err_student_id_not_found">Student id not found</string>
    <string name="err_password_not_match">Password not match</string>
    <string name="err_password_invalid">Password invalid</string>

    <string name="common_err">Error</string>

    <string name="common_success">Success</string>
    <string name="common_fail">Fail</string>
    <string name="common_ok">Ok</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_comment">Comment</string>
    <string name="common_comment_hint">Enter comment...</string>
    <string name="common_confirm">Confirm</string>
    <string name="common_user_not_permission_edit_post">You can\'t edit this post</string>
    <string name="common_confirm_delete">Are you want to delete this item?</string>
    <string name="common_notice">Notice</string>
    <string name="common_permission_grant">This feature need your permission</string>
    <string name="common_later">Later</string>

    <string name="edit_post_title_edit">Edit post</string>
    <string name="edit_post_title_new">New post</string>
    <string name="edit_post_err_fill_content">Please enter your message</string>

    <string name="bottom_sheet_title_post_list">Post</string>
    <string name="bottom_sheet_new_post_hint">New Post</string>
    <string name="bottom_sheet_btn_student_list">Students</string>
    <string name="bottom_sheet_btn_post">Post</string>

    <string name="bottom_sheet_title_message_list">Message</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_to_search">Input to search</string>
    <string name="delete_success">Delete success</string>
    <string name="delete_false">Delete false</string>
    <string name="common_no_data">No Data Found</string>
    <string name="discussion">Discussion</string>
    <string-array name="sort_options">
        <item>Sort by Created Time</item>
        <item>Sort by Modified Time</item>
    </string-array>
</resources>